ci: update 3.10; update plugin-registry-generator[3.8] = 7.72.0; update previous CSV to 3.8.0 for 3.9+; disable 3.9 jobs; disable 3.9 mgmt jobs
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/che-plugin-registry/deploy/openshift/devspaces-plugin-registry.yaml
+++ b/dependencies/che-plugin-registry/deploy/openshift/devspaces-plugin-registry.yaml
@@ -132,6 +132,6 @@ parameters:
     displayName: Red Hat OpenShift Dev Spaces plugin registry image pull policy
     description: Always pull by default. Can be IfNotPresent
   - name: START_OPENVSX
-    value: "false"
+    value: 'false'
     displayName: Start embedded OpenVSX registry
     description: If true, an embedded OpenVSX registry will be started
