--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -1,6 +1,6 @@
 {
   "Purpose": "To set configurations of jenkins jobs including upstream branches, dependencies and disabled status",
-  "Version": "3.10",
+  "Version": "3.11",
   "Jobs": {
     "code": {
       "3.8": {
@@ -20,6 +20,13 @@
       "3.10": {
         "upstream_branch": [
           "7.76.x",
+          "main"
+        ],
+        "disabled": true
+      },
+      "3.11": {
+        "upstream_branch": [
+          "7.78.x",
           "main"
         ],
         "disabled": true
@@ -54,6 +61,13 @@
         ],
         "disabled": true
       },
+      "3.11": {
+        "upstream_branch": [
+          "7.78.x",
+          "main"
+        ],
+        "disabled": true
+      },
       "3.x": {
         "upstream_branch": [
           "main",
@@ -80,6 +94,13 @@
       "3.10": {
         "upstream_branch": [
           "7.76.x",
+          "main"
+        ],
+        "disabled": true
+      },
+      "3.11": {
+        "upstream_branch": [
+          "7.78.x",
           "main"
         ],
         "disabled": true
@@ -114,6 +135,13 @@
         ],
         "disabled": true
       },
+      "3.11": {
+        "upstream_branch": [
+          "7.78.x",
+          "main"
+        ],
+        "disabled": true
+      },
       "3.x": {
         "upstream_branch": [
           "main",
@@ -140,6 +168,13 @@
       "3.10": {
         "upstream_branch": [
           "7.76.x",
+          "main"
+        ],
+        "disabled": true
+      },
+      "3.11": {
+        "upstream_branch": [
+          "7.78.x",
           "main"
         ],
         "disabled": true
@@ -174,6 +209,13 @@
         ],
         "disabled": true
       },
+      "3.11": {
+        "upstream_branch": [
+          "7.78.x",
+          "main"
+        ],
+        "disabled": true
+      },
       "3.x": {
         "upstream_branch": [
           "main",
@@ -200,6 +242,13 @@
       "3.10": {
         "upstream_branch": [
           "7.76.x",
+          "main"
+        ],
+        "disabled": true
+      },
+      "3.11": {
+        "upstream_branch": [
+          "7.78.x",
           "main"
         ],
         "disabled": true
@@ -234,6 +283,13 @@
         ],
         "disabled": true
       },
+      "3.11": {
+        "upstream_branch": [
+          "devspaces-3.11-rhel-8",
+          "devspaces-3.11-rhel-8"
+        ],
+        "disabled": true
+      },
       "3.x": {
         "upstream_branch": [
           "devspaces-3-rhel-8",
@@ -264,6 +320,13 @@
         ],
         "disabled": true
       },
+      "3.11": {
+        "upstream_branch": [
+          "devspaces-3.11-rhel-8",
+          "devspaces-3.11-rhel-8"
+        ],
+        "disabled": true
+      },
       "3.x": {
         "upstream_branch": [
           "devspaces-3-rhel-8",
@@ -288,6 +351,13 @@
         "disabled": true
       },
       "3.10": {
+        "upstream_branch": [
+          "20221111",
+          "20221111"
+        ],
+        "disabled": true
+      },
+      "3.11": {
         "upstream_branch": [
           "20221111",
           "20221111"
@@ -324,6 +394,13 @@
         ],
         "disabled": true
       },
+      "3.11": {
+        "upstream_branch": [
+          "v2.9.6",
+          "v2.9.6"
+        ],
+        "disabled": true
+      },
       "3.x": {
         "upstream_branch": [
           "v2.9.6",
@@ -340,6 +417,9 @@
         "disabled": true
       },
       "3.10": {
+        "disabled": true
+      },
+      "3.11": {
         "disabled": true
       },
       "3.x": {
@@ -365,6 +445,13 @@
         "upstream_branch": [
           "devspaces-3.10-rhel-8",
           "devspaces-3.10-rhel-8"
+        ],
+        "disabled": true
+      },
+      "3.11": {
+        "upstream_branch": [
+          "devspaces-3.11-rhel-8",
+          "devspaces-3.11-rhel-8"
         ],
         "disabled": true
       },
@@ -401,6 +488,13 @@
         ],
         "disabled": true
       },
+      "3.11": {
+        "upstream_branch": [
+          "7.78.x",
+          "main"
+        ],
+        "disabled": true
+      },
       "3.x": {
         "upstream_branch": [
           "main",
@@ -431,6 +525,13 @@
         ],
         "disabled": true
       },
+      "3.11": {
+        "upstream_branch": [
+          "7.78.x",
+          "main"
+        ],
+        "disabled": true
+      },
       "3.x": {
         "upstream_branch": [
           "main",
@@ -449,6 +550,9 @@
       "3.10": {
         "disabled": true
       },
+      "3.11": {
+        "disabled": true
+      },
       "3.x": {
         "disabled": false
       }
@@ -461,6 +565,9 @@
         "disabled": true
       },
       "3.10": {
+        "disabled": true
+      },
+      "3.11": {
         "disabled": true
       },
       "3.x": {
@@ -477,6 +584,9 @@
       "3.10": {
         "disabled": true
       },
+      "3.11": {
+        "disabled": true
+      },
       "3.x": {
         "disabled": false
       }
@@ -489,6 +599,9 @@
         "disabled": true
       },
       "3.10": {
+        "disabled": true
+      },
+      "3.11": {
         "disabled": true
       },
       "3.x": {
@@ -505,6 +618,9 @@
       "3.10": {
         "disabled": true
       },
+      "3.11": {
+        "disabled": true
+      },
       "3.x": {
         "disabled": true
       }
@@ -517,6 +633,9 @@
         "disabled": true
       },
       "3.10": {
+        "disabled": true
+      },
+      "3.11": {
         "disabled": true
       },
       "3.x": {
@@ -536,11 +655,15 @@
       },
       "3.10": {
         "CSV_VERSION": "3.10.0",
-        "CSV_VERSION_PREV": "3.8.0"
+        "CSV_VERSION_PREV": "3.9.0"
+      },
+      "3.11": {
+        "CSV_VERSION": "3.11.0",
+        "CSV_VERSION_PREV": "3.9.0"
       },
       "3.x": {
-        "CSV_VERSION": "3.10.0",
-        "CSV_VERSION_PREV": "3.8.0"
+        "CSV_VERSION": "3.11.0",
+        "CSV_VERSION_PREV": "3.9.0"
       }
     }
   },
@@ -549,60 +672,70 @@
       "3.8": "116894",
       "3.9": "119896",
       "3.10": "n/a",
+      "3.11": "n/a",
       "3.x": "n/a"
     },
     "Epic": {
       "3.8": "CRW-4586",
       "3.9": "CRW-4828",
       "3.10": "n/a",
+      "3.11": "n/a",
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
       "3.8": "latest",
       "3.9": "latest",
       "3.10": "next",
+      "3.11": "next",
       "3.x": "next"
     },
     "DEV_WORKSPACE_CONTROLLER": {
       "3.8": "v0.13.0",
       "3.9": "v0.13.0",
       "3.10": "v0.13.0",
+      "3.11": "v0.13.0",
       "3.x": "v0.13.0"
     },
     "DEV_HEADER_REWRITE_TRAEFIK_PLUGIN": {
       "3.8": "v0.1.2",
       "3.9": "v0.1.2",
       "3.10": "v0.1.2",
+      "3.11": "v0.1.2",
       "3.x": "v0.1.2"
     },
     "gopls": {
       "3.8": "gopls/v0.10.1",
       "3.9": "gopls/v0.10.1",
       "3.10": "gopls/v0.10.1",
+      "3.11": "gopls/v0.10.1",
       "3.x": "gopls/v0.10.1"
     },
     "xdebug": {
       "3.8": "3.1.6",
       "3.9": "3.1.6",
       "3.10": "3.1.6",
+      "3.11": "3.1.6",
       "3.x": "3.1.6"
     },
     "kubedock": {
       "3.8": "0.11.0",
       "3.9": "0.11.0",
       "3.10": "0.11.0",
+      "3.11": "0.11.0",
       "3.x": "0.11.0"
     },
     "DEV_WORKSPACE_OPERATOR_TAG": {
       "3.8": "0.21",
       "3.9": "0.21",
       "3.10": "0.21",
+      "3.11": "0.21",
       "3.x": "0.21"
     },
     "@eclipse-che/plugin-registry-generator": {
       "3.8": "7.72.0",
       "3.9": "next",
       "3.10": "next",
+      "3.11": "next",
       "3.x": "next"
     },
     "OPENSHIFT_VERSIONS_SUPPORTED": {
@@ -625,6 +758,12 @@
         "v4.12",
         "v4.11"
       ],
+      "3.11": [
+        "v4.14",
+        "v4.13",
+        "v4.12",
+        "v4.11"
+      ],
       "3.x": [
         "v4.14",
         "v4.13",
@@ -636,30 +775,35 @@
       "3.8": "4.12",
       "3.9": "4.12",
       "3.10": "4.12",
+      "3.11": "4.12",
       "3.x": "4.12"
     },
     "OCP_TOOLS_CONTENT_SET_VERSION": {
       "3.8": "4.12",
       "3.9": "4.12",
       "3.10": "4.12",
+      "3.11": "4.12",
       "3.x": "4.12"
     },
     "GOLANG_VERSION": {
       "3.8": "1.16.2",
       "3.9": "1.16.2",
       "3.10": "1.16.2",
+      "3.11": "1.16.2",
       "3.x": "1.16.2"
     },
     "NODE_VERSION": {
       "3.8": "14.20.0",
       "3.9": "18.16.1",
       "3.10": "18.16.1",
+      "3.11": "18.16.1",
       "3.x": "18.16.1"
     },
     "YARN_VERSION": {
       "3.8": "1.22.19",
       "3.9": "1.22.19",
       "3.10": "1.22.19",
+      "3.11": "1.22.19",
       "3.x": "1.22.19"
     },
     "slack_notification": {
