add errata and epic links; fix FLOATING_QUAY_TAGS for 3.8 and 3.9
Change-Id: I8b45b5392d8b63cf24743527b53e4c1a45a643df
Signed-off-by: Nick Boldt <nboldt@redhat.com>

--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -671,21 +671,21 @@
     "Errata": {
       "3.8": "116894",
       "3.9": "119896",
-      "3.10": "n/a",
+      "3.10": "122589",
       "3.11": "n/a",
       "3.x": "n/a"
     },
     "Epic": {
       "3.8": "CRW-4586",
       "3.9": "CRW-4828",
-      "3.10": "n/a",
+      "3.10": "CRW-4950",
       "3.11": "n/a",
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
-      "3.8": "latest",
-      "3.9": "latest",
-      "3.10": "next",
+      "3.8": "3.8",
+      "3.9": "3.9",
+      "3.10": "latest",
       "3.11": "next",
       "3.x": "next"
     },
