--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -3,13 +3,6 @@
   "Version": "3.11",
   "Jobs": {
     "code": {
-      "3.8": {
-        "upstream_branch": [
-          "7.72.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "7.74.x",
@@ -29,7 +22,7 @@
           "7.78.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -40,13 +33,6 @@
       }
     },
     "configbump": {
-      "3.8": {
-        "upstream_branch": [
-          "7.72.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "7.74.x",
@@ -66,7 +52,7 @@
           "7.78.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -77,13 +63,6 @@
       }
     },
     "dashboard": {
-      "3.8": {
-        "upstream_branch": [
-          "7.72.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "7.74.x",
@@ -103,7 +82,7 @@
           "7.78.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -114,13 +93,6 @@
       }
     },
     "imagepuller": {
-      "3.8": {
-        "upstream_branch": [
-          "7.72.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "7.74.x",
@@ -140,7 +112,7 @@
           "7.78.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -151,13 +123,6 @@
       }
     },
     "machineexec": {
-      "3.8": {
-        "upstream_branch": [
-          "7.72.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "7.74.x",
@@ -177,7 +142,7 @@
           "7.78.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -188,13 +153,6 @@
       }
     },
     "operator": {
-      "3.8": {
-        "upstream_branch": [
-          "7.72.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "7.74.x",
@@ -214,7 +172,7 @@
           "7.78.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -225,13 +183,6 @@
       }
     },
     "server": {
-      "3.8": {
-        "upstream_branch": [
-          "7.72.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "7.74.x",
@@ -251,7 +202,7 @@
           "7.78.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -262,13 +213,6 @@
       }
     },
     "devfileregistry": {
-      "3.8": {
-        "upstream_branch": [
-          "devspaces-3.8-rhel-8",
-          "devspaces-3.8-rhel-8"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "devspaces-3.9-rhel-8",
@@ -288,7 +232,7 @@
           "devspaces-3.11-rhel-8",
           "devspaces-3.11-rhel-8"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -299,13 +243,6 @@
       }
     },
     "pluginregistry": {
-      "3.8": {
-        "upstream_branch": [
-          "devspaces-3.8-rhel-8",
-          "devspaces-3.8-rhel-8"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "devspaces-3.9-rhel-8",
@@ -325,7 +262,7 @@
           "devspaces-3.11-rhel-8",
           "devspaces-3.11-rhel-8"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -336,13 +273,6 @@
       }
     },
     "idea": {
-      "3.8": {
-        "upstream_branch": [
-          "20221111",
-          "20221111"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "20221111",
@@ -362,7 +292,7 @@
           "20221111",
           "20221111"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -373,13 +303,6 @@
       }
     },
     "traefik": {
-      "3.8": {
-        "upstream_branch": [
-          "v2.9.6",
-          "v2.9.6"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "v2.9.6",
@@ -399,7 +322,7 @@
           "v2.9.6",
           "v2.9.6"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -410,9 +333,6 @@
       }
     },
     "build-all-images": {
-      "3.8": {
-        "disabled": true
-      },
       "3.9": {
         "disabled": true
       },
@@ -420,20 +340,13 @@
         "disabled": true
       },
       "3.11": {
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "disabled": false
       }
     },
     "udi": {
-      "3.8": {
-        "upstream_branch": [
-          "devspaces-3.8-rhel-8",
-          "devspaces-3.8-rhel-8"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "devspaces-3.9-rhel-8",
@@ -453,7 +366,7 @@
           "devspaces-3.11-rhel-8",
           "devspaces-3.11-rhel-8"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -466,14 +379,6 @@
   },
   "Management-Jobs": {
     "dsc": {
-      "3.8": {
-        "upstream_branch": [
-          "7.72.x",
-          "main"
-        ],
-        "node_version": "16.13.2",
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "7.74.x",
@@ -493,7 +398,7 @@
           "7.78.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -504,13 +409,6 @@
       }
     },
     "operator-bundle": {
-      "3.8": {
-        "upstream_branch": [
-          "7.72.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.9": {
         "upstream_branch": [
           "7.74.x",
@@ -530,7 +428,7 @@
           "7.78.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "upstream_branch": [
@@ -541,9 +439,6 @@
       }
     },
     "get-sources-rhpkg-container-build": {
-      "3.8": {
-        "disabled": true
-      },
       "3.9": {
         "disabled": true
       },
@@ -551,16 +446,13 @@
         "disabled": true
       },
       "3.11": {
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "disabled": false
       }
     },
     "push-latest-container-to-quay": {
-      "3.8": {
-        "disabled": true
-      },
       "3.9": {
         "disabled": true
       },
@@ -568,16 +460,13 @@
         "disabled": true
       },
       "3.11": {
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "disabled": false
       }
     },
     "sync-to-downstream": {
-      "3.8": {
-        "disabled": true
-      },
       "3.9": {
         "disabled": true
       },
@@ -585,16 +474,13 @@
         "disabled": true
       },
       "3.11": {
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "disabled": false
       }
     },
     "update-digests": {
-      "3.8": {
-        "disabled": true
-      },
       "3.9": {
         "disabled": true
       },
@@ -602,16 +488,13 @@
         "disabled": true
       },
       "3.11": {
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "disabled": false
       }
     },
     "send-email-qe-build-list": {
-      "3.8": {
-        "disabled": true
-      },
       "3.9": {
         "disabled": true
       },
@@ -619,16 +502,13 @@
         "disabled": true
       },
       "3.11": {
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "disabled": true
       }
     },
     "slack_notification": {
-      "3.8": {
-        "disabled": true
-      },
       "3.9": {
         "disabled": true
       },
@@ -636,7 +516,7 @@
         "disabled": true
       },
       "3.11": {
-        "disabled": true
+        "disabled": false
       },
       "3.x": {
         "disabled": true
@@ -645,10 +525,6 @@
   },
   "CSVs": {
     "operator-bundle": {
-      "3.8": {
-        "CSV_VERSION": "3.8.0",
-        "CSV_VERSION_PREV": "3.7.2"
-      },
       "3.9": {
         "CSV_VERSION": "3.9.0",
         "CSV_VERSION_PREV": "3.8.0"
@@ -669,83 +545,66 @@
   },
   "Other": {
     "Errata": {
-      "3.8": "116894",
       "3.9": "119896",
       "3.10": "122589",
       "3.11": "n/a",
       "3.x": "n/a"
     },
     "Epic": {
-      "3.8": "CRW-4586",
       "3.9": "CRW-4828",
       "3.10": "CRW-4950",
       "3.11": "n/a",
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
-      "3.8": "3.8",
       "3.9": "3.9",
       "3.10": "latest",
-      "3.11": "next",
+      "3.11": "latest",
       "3.x": "next"
     },
     "DEV_WORKSPACE_CONTROLLER": {
-      "3.8": "v0.13.0",
       "3.9": "v0.13.0",
       "3.10": "v0.13.0",
       "3.11": "v0.13.0",
       "3.x": "v0.13.0"
     },
     "DEV_HEADER_REWRITE_TRAEFIK_PLUGIN": {
-      "3.8": "v0.1.2",
       "3.9": "v0.1.2",
       "3.10": "v0.1.2",
       "3.11": "v0.1.2",
       "3.x": "v0.1.2"
     },
     "gopls": {
-      "3.8": "gopls/v0.10.1",
       "3.9": "gopls/v0.10.1",
       "3.10": "gopls/v0.10.1",
       "3.11": "gopls/v0.10.1",
       "3.x": "gopls/v0.10.1"
     },
     "xdebug": {
-      "3.8": "3.1.6",
       "3.9": "3.1.6",
       "3.10": "3.1.6",
       "3.11": "3.1.6",
       "3.x": "3.1.6"
     },
     "kubedock": {
-      "3.8": "0.11.0",
       "3.9": "0.11.0",
       "3.10": "0.11.0",
       "3.11": "0.11.0",
       "3.x": "0.11.0"
     },
     "DEV_WORKSPACE_OPERATOR_TAG": {
-      "3.8": "0.21",
       "3.9": "0.21",
       "3.10": "0.21",
       "3.11": "0.21",
       "3.x": "0.21"
     },
     "@eclipse-che/plugin-registry-generator": {
-      "3.8": "7.72.0",
       "3.9": "next",
       "3.10": "next",
-      "3.11": "next",
+      "3.11": "latest",
       "3.x": "next"
     },
     "OPENSHIFT_VERSIONS_SUPPORTED": {
-      "3.8": [
-        "v4.14",
-        "v4.13",
-        "v4.12",
-        "v4.11",
-        "v4.10"
-      ],
       "3.9": [
         "v4.14",
         "v4.13",
@@ -772,42 +631,37 @@
       ]
     },
     "OPENSHIFT_CONTENT_SET_VERSION": {
-      "3.8": "4.12",
       "3.9": "4.12",
       "3.10": "4.12",
       "3.11": "4.12",
       "3.x": "4.12"
     },
     "OCP_TOOLS_CONTENT_SET_VERSION": {
-      "3.8": "4.12",
       "3.9": "4.12",
       "3.10": "4.12",
       "3.11": "4.12",
       "3.x": "4.12"
     },
     "GOLANG_VERSION": {
-      "3.8": "1.16.2",
       "3.9": "1.16.2",
       "3.10": "1.16.2",
       "3.11": "1.16.2",
       "3.x": "1.16.2"
     },
     "NODE_VERSION": {
-      "3.8": "14.20.0",
       "3.9": "18.16.1",
       "3.10": "18.16.1",
       "3.11": "18.16.1",
       "3.x": "18.16.1"
     },
     "YARN_VERSION": {
-      "3.8": "1.22.19",
       "3.9": "1.22.19",
       "3.10": "1.22.19",
       "3.11": "1.22.19",
       "3.x": "1.22.19"
     },
     "slack_notification": {
-      "3.8": true
+      "3.11": true
     }
   },
   "Copyright": [
