--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -15,7 +15,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -23,6 +23,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "7.62.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -45,7 +52,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -53,6 +60,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "7.62.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -75,7 +89,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -83,6 +97,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "7.62.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -105,7 +126,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -113,6 +134,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "7.62.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -135,7 +163,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -143,6 +171,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "7.62.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -165,7 +200,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -173,6 +208,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "7.62.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -195,7 +237,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -203,6 +245,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "7.62.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -225,7 +274,7 @@
           "devspaces-3.10-rhel-8",
           "devspaces-3.10-rhel-8"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -233,6 +282,13 @@
           "devspaces-3.11-rhel-8"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "devspaces-3-rhel-8",
+          "devspaces-3-rhel-8"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -255,7 +311,7 @@
           "devspaces-3.10-rhel-8",
           "devspaces-3.10-rhel-8"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -263,6 +319,13 @@
           "devspaces-3.11-rhel-8"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "devspaces-3-rhel-8",
+          "devspaces-3-rhel-8"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -285,7 +348,7 @@
           "20221111",
           "20221111"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -293,6 +356,13 @@
           "20221111"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "20221111",
+          "20221111"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -315,7 +385,7 @@
           "v2.9.6",
           "v2.9.6"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -323,6 +393,13 @@
           "v2.9.6"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "v2.9.6",
+          "v2.9.6"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -337,10 +414,13 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
+      },
+      "3": {
+        "disabled": true
       },
       "3.x": {
         "disabled": false
@@ -359,7 +439,7 @@
           "devspaces-3.10-rhel-8",
           "devspaces-3.10-rhel-8"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -367,6 +447,13 @@
           "devspaces-3.11-rhel-8"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "devspaces-3-rhel-8",
+          "devspaces-3-rhel-8"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -391,7 +478,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -399,6 +486,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "7.62.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -421,7 +515,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -429,6 +523,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3": {
+        "upstream_branch": [
+          "7.62.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -443,10 +544,13 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
+      },
+      "3": {
+        "disabled": true
       },
       "3.x": {
         "disabled": false
@@ -457,10 +561,13 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
+      },
+      "3": {
+        "disabled": true
       },
       "3.x": {
         "disabled": false
@@ -471,10 +578,13 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
+      },
+      "3": {
+        "disabled": true
       },
       "3.x": {
         "disabled": false
@@ -485,10 +595,13 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
+      },
+      "3": {
+        "disabled": true
       },
       "3.x": {
         "disabled": false
@@ -499,10 +612,13 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
+      },
+      "3": {
+        "disabled": true
       },
       "3.x": {
         "disabled": true
@@ -513,10 +629,13 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
+      },
+      "3": {
+        "disabled": true
       },
       "3.x": {
         "disabled": true
@@ -537,6 +656,10 @@
         "CSV_VERSION": "3.11.0",
         "CSV_VERSION_PREV": "3.9.0"
       },
+      "3": {
+        "CSV_VERSION": "3.0",
+        "CSV_VERSION_PREV": "3.9.0"
+      },
       "3.x": {
         "CSV_VERSION": "3.11.0",
         "CSV_VERSION_PREV": "3.9.0"
@@ -548,60 +671,70 @@
       "3.9": "119896",
       "3.10": "122589",
       "3.11": "n/a",
+      "3": "n/a",
       "3.x": "n/a"
     },
     "Epic": {
       "3.9": "CRW-4828",
       "3.10": "CRW-4950",
       "3.11": "n/a",
+      "3": "n/a",
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
       "3.9": "3.9",
       "3.10": "latest",
       "3.11": "latest",
+      "3": "next",
       "3.x": "next"
     },
     "DEV_WORKSPACE_CONTROLLER": {
       "3.9": "v0.13.0",
       "3.10": "v0.13.0",
       "3.11": "v0.13.0",
+      "3": "v0.13.0",
       "3.x": "v0.13.0"
     },
     "DEV_HEADER_REWRITE_TRAEFIK_PLUGIN": {
       "3.9": "v0.1.2",
       "3.10": "v0.1.2",
       "3.11": "v0.1.2",
+      "3": "v0.1.2",
       "3.x": "v0.1.2"
     },
     "gopls": {
       "3.9": "gopls/v0.10.1",
       "3.10": "gopls/v0.10.1",
       "3.11": "gopls/v0.10.1",
+      "3": "gopls/v0.10.1",
       "3.x": "gopls/v0.10.1"
     },
     "xdebug": {
       "3.9": "3.1.6",
       "3.10": "3.1.6",
       "3.11": "3.1.6",
+      "3": "3.1.6",
       "3.x": "3.1.6"
     },
     "kubedock": {
       "3.9": "0.11.0",
       "3.10": "0.11.0",
       "3.11": "0.11.0",
+      "3": "0.11.0",
       "3.x": "0.11.0"
     },
     "DEV_WORKSPACE_OPERATOR_TAG": {
       "3.9": "0.21",
       "3.10": "0.21",
       "3.11": "0.21",
+      "3": "0.21",
       "3.x": "0.21"
     },
     "@eclipse-che/plugin-registry-generator": {
       "3.9": "next",
       "3.10": "next",
       "3.11": "latest",
+      "3": "next",
       "3.x": "next"
     },
     "OPENSHIFT_VERSIONS_SUPPORTED": {
@@ -623,6 +756,12 @@
         "v4.12",
         "v4.11"
       ],
+      "3": [
+        "v4.14",
+        "v4.13",
+        "v4.12",
+        "v4.11"
+      ],
       "3.x": [
         "v4.14",
         "v4.13",
@@ -634,30 +773,35 @@
       "3.9": "4.12",
       "3.10": "4.12",
       "3.11": "4.12",
+      "3": "4.12",
       "3.x": "4.12"
     },
     "OCP_TOOLS_CONTENT_SET_VERSION": {
       "3.9": "4.12",
       "3.10": "4.12",
       "3.11": "4.12",
+      "3": "4.12",
       "3.x": "4.12"
     },
     "GOLANG_VERSION": {
       "3.9": "1.16.2",
       "3.10": "1.16.2",
       "3.11": "1.16.2",
+      "3": "1.16.2",
       "3.x": "1.16.2"
     },
     "NODE_VERSION": {
       "3.9": "18.16.1",
       "3.10": "18.16.1",
       "3.11": "18.16.1",
+      "3": "18.16.1",
       "3.x": "18.16.1"
     },
     "YARN_VERSION": {
       "3.9": "1.22.19",
       "3.10": "1.22.19",
       "3.11": "1.22.19",
+      "3": "1.22.19",
       "3.x": "1.22.19"
     },
     "slack_notification": {
