ci: update 3.11; update previous CSV to 3.9.0 for 3.10+; enable 3.10 jobs; enable 3.10 mgmt jobs
Change-Id: Ib13463eeddae2528985cba6567ce9ddc77a631bf
Signed-off-by: Nick Boldt <nboldt@redhat.com>

--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -15,7 +15,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -45,7 +45,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -75,7 +75,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -105,7 +105,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -135,7 +135,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -165,7 +165,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -195,7 +195,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -225,7 +225,7 @@
           "devspaces-3.10-rhel-8",
           "devspaces-3.10-rhel-8"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -255,7 +255,7 @@
           "devspaces-3.10-rhel-8",
           "devspaces-3.10-rhel-8"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -285,7 +285,7 @@
           "20221111",
           "20221111"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -315,7 +315,7 @@
           "v2.9.6",
           "v2.9.6"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -337,7 +337,7 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
@@ -359,7 +359,7 @@
           "devspaces-3.10-rhel-8",
           "devspaces-3.10-rhel-8"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -391,7 +391,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -421,7 +421,7 @@
           "7.76.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "upstream_branch": [
@@ -443,7 +443,7 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
@@ -457,7 +457,7 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
@@ -471,7 +471,7 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
@@ -485,7 +485,7 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
@@ -499,7 +499,7 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
@@ -513,7 +513,7 @@
         "disabled": true
       },
       "3.10": {
-        "disabled": true
+        "disabled": false
       },
       "3.11": {
         "disabled": false
