--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -2905,3 +2905,102 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.10-16
+  taskId: 56491019
+  timeCreate: Tue Oct 24 17:09:37 2023
+  timeStart: Tue Oct 24 17:10:19 2023
+  timeFinish: Tue Oct 24 17:45:41 2023
+  timeWait: 0 mins
+  timeBuild: 35 mins
+  timeTotal: 36 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.10-77
+  taskId: 56492721
+  timeCreate: Tue Oct 24 18:31:34 2023
+  timeStart: Tue Oct 24 18:32:19 2023
+  timeFinish: Tue Oct 24 18:41:58 2023
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 10 mins
+- name: devspaces-udi-rhel8
+  tag: 3.10-15
+  taskId: 56493372
+  timeCreate: Tue Oct 24 19:33:44 2023
+  timeStart: Tue Oct 24 19:33:59 2023
+  timeFinish: Tue Oct 24 20:21:41 2023
+  timeWait: 0 mins
+  timeBuild: 47 mins
+  timeTotal: 47 mins
+- name: devspaces-traefik-rhel8
+  tag: 3.10-9
+  taskId: 56495259
+  timeCreate: Tue Oct 24 22:21:39 2023
+  timeStart: Tue Oct 24 22:23:51 2023
+  timeFinish: Tue Oct 24 22:46:40 2023
+  timeWait: 2 mins
+  timeBuild: 22 mins
+  timeTotal: 25 mins
+- name: devspaces-server-rhel8
+  tag: 3.10-20
+  taskId: 56495696
+  timeCreate: Tue Oct 24 23:15:26 2023
+  timeStart: Tue Oct 24 23:15:55 2023
+  timeFinish: Tue Oct 24 23:24:07 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.10-8
+  taskId: 56517746
+  timeCreate: Wed Oct 25 14:59:31 2023
+  timeStart: Wed Oct 25 15:23:38 2023
+  timeFinish: Wed Oct 25 15:29:56 2023
+  timeWait: 24 mins
+  timeBuild: 6 mins
+  timeTotal: 30 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.10-16
+  taskId: 56517776
+  timeCreate: Wed Oct 25 15:00:02 2023
+  timeStart: Wed Oct 25 15:24:25 2023
+  timeFinish: Wed Oct 25 15:38:56 2023
+  timeWait: 24 mins
+  timeBuild: 14 mins
+  timeTotal: 38 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.10-8
+  taskId: 56517780
+  timeCreate: Wed Oct 25 15:00:31 2023
+  timeStart: Wed Oct 25 15:24:25 2023
+  timeFinish: Wed Oct 25 15:37:27 2023
+  timeWait: 23 mins
+  timeBuild: 13 mins
+  timeTotal: 36 mins
+- name: devspaces-operator
+  tag: 3.10-19
+  taskId: 56517824
+  timeCreate: Wed Oct 25 15:03:29 2023
+  timeStart: Wed Oct 25 15:28:17 2023
+  timeFinish: Wed Oct 25 15:45:55 2023
+  timeWait: 24 mins
+  timeBuild: 17 mins
+  timeTotal: 42 mins
+- name: devspaces-idea-rhel8
+  tag: 3.10-5
+  taskId: 56518017
+  timeCreate: Wed Oct 25 15:15:41 2023
+  timeStart: Wed Oct 25 15:43:36 2023
+  timeFinish: Wed Oct 25 16:00:03 2023
+  timeWait: 27 mins
+  timeBuild: 16 mins
+  timeTotal: 44 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-169
+  taskId: 56526596
+  timeCreate: Wed Oct 25 20:40:35 2023
+  timeStart: Wed Oct 25 20:51:37 2023
+  timeFinish: Wed Oct 25 20:55:52 2023
+  timeWait: 11 mins
+  timeBuild: 4 mins
+  timeTotal: 15 mins
