--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -2950,3 +2950,93 @@
   timeWait: 0 mins
   timeBuild: 5 mins
   timeTotal: 5 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.11-5
+  taskId: 56549331
+  timeCreate: Thu Oct 26 14:07:15 2023
+  timeStart: Thu Oct 26 14:07:47 2023
+  timeFinish: Thu Oct 26 14:31:35 2023
+  timeWait: 0 mins
+  timeBuild: 23 mins
+  timeTotal: 24 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-1
+  taskId: 56557885
+  timeCreate: Thu Oct 26 20:03:30 2023
+  timeStart: Thu Oct 26 20:03:32 2023
+  timeFinish: Thu Oct 26 20:10:42 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 7 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.11-1
+  taskId: 56559152
+  timeCreate: Thu Oct 26 22:04:11 2023
+  timeStart: Thu Oct 26 22:04:54 2023
+  timeFinish: Thu Oct 26 22:17:37 2023
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 13 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.11-1
+  taskId: 56559170
+  timeCreate: Thu Oct 26 22:05:39 2023
+  timeStart: Thu Oct 26 22:05:42 2023
+  timeFinish: Thu Oct 26 22:17:25 2023
+  timeWait: 0 mins
+  timeBuild: 11 mins
+  timeTotal: 11 mins
+- name: devspaces-operator
+  tag: 3.11-1
+  taskId: 56559172
+  timeCreate: Thu Oct 26 22:05:49 2023
+  timeStart: Thu Oct 26 22:06:30 2023
+  timeFinish: Thu Oct 26 22:22:03 2023
+  timeWait: 0 mins
+  timeBuild: 15 mins
+  timeTotal: 16 mins
+- name: devspaces-traefik-rhel8
+  tag: 3.11-1
+  taskId: 56559173
+  timeCreate: Thu Oct 26 22:05:58 2023
+  timeStart: Thu Oct 26 22:06:31 2023
+  timeFinish: Thu Oct 26 22:32:10 2023
+  timeWait: 0 mins
+  timeBuild: 25 mins
+  timeTotal: 26 mins
+- name: devspaces-idea-rhel8
+  tag: 3.11-1
+  taskId: 56559617
+  timeCreate: Thu Oct 26 22:17:18 2023
+  timeStart: Thu Oct 26 22:17:27 2023
+  timeFinish: Thu Oct 26 22:32:56 2023
+  timeWait: 0 mins
+  timeBuild: 15 mins
+  timeTotal: 15 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.11-5
+  taskId: 56559695
+  timeCreate: Thu Oct 26 22:30:43 2023
+  timeStart: Thu Oct 26 22:31:22 2023
+  timeFinish: Thu Oct 26 22:39:36 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-server-rhel8
+  tag: 3.11-1
+  taskId: 56560021
+  timeCreate: Thu Oct 26 22:45:51 2023
+  timeStart: Thu Oct 26 22:46:00 2023
+  timeFinish: Thu Oct 26 22:54:08 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-1
+  taskId: 56560397
+  timeCreate: Thu Oct 26 22:57:52 2023
+  timeStart: Thu Oct 26 22:58:25 2023
+  timeFinish: Thu Oct 26 23:01:53 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
