--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -3175,6 +3175,15 @@
   timeWait: 0 mins
   timeBuild: 8 mins
   timeTotal: 8 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.11-2
+  taskId: 56596329
+  timeCreate: Sun Oct 29 11:05:41 2023
+  timeStart: Sun Oct 29 11:06:00 2023
+  timeFinish: Sun Oct 29 11:37:53 2023
+  timeWait: 0 mins
+  timeBuild: 31 mins
+  timeTotal: 32 mins
 - name: devspaces-operator-bundle
   tag: 3.11-5
   taskId: 56596420
@@ -3183,4 +3192,13 @@
   timeFinish: Sun Oct 29 11:27:22 2023
   timeWait: 0 mins
   timeBuild: 3 mins
+  timeTotal: 3 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-6
+  taskId: 56596548
+  timeCreate: Sun Oct 29 12:04:22 2023
+  timeStart: Sun Oct 29 12:05:07 2023
+  timeFinish: Sun Oct 29 12:08:05 2023
+  timeWait: 0 mins
+  timeBuild: 2 mins
   timeTotal: 3 mins
