--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -3229,3 +3229,30 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-3
+  taskId: 56596831
+  timeCreate: Sun Oct 29 13:47:37 2023
+  timeStart: Sun Oct 29 13:47:42 2023
+  timeFinish: Sun Oct 29 13:54:29 2023
+  timeWait: 0 mins
+  timeBuild: 6 mins
+  timeTotal: 6 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.11-9
+  taskId: 56596899
+  timeCreate: Sun Oct 29 14:08:32 2023
+  timeStart: Sun Oct 29 14:09:12 2023
+  timeFinish: Sun Oct 29 14:17:17 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-8
+  taskId: 56596909
+  timeCreate: Sun Oct 29 14:14:15 2023
+  timeStart: Sun Oct 29 14:14:34 2023
+  timeFinish: Sun Oct 29 14:18:02 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
