--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -3292,3 +3292,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.11-7
+  taskId: 56607556
+  timeCreate: Mon Oct 30 10:54:24 2023
+  timeStart: Mon Oct 30 10:54:33 2023
+  timeFinish: Mon Oct 30 11:16:09 2023
+  timeWait: 0 mins
+  timeBuild: 21 mins
+  timeTotal: 21 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-11
+  taskId: 56608533
+  timeCreate: Mon Oct 30 11:23:34 2023
+  timeStart: Mon Oct 30 11:24:07 2023
+  timeFinish: Mon Oct 30 11:27:59 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
